--- a/project.private.config.json
+++ b/project.private.config.json
@@ -35,6 +35,12 @@
           "pathName": "pages/personal/personal",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/map/map",
+          "pathName": "pages/map/map",
+          "query": "",
+          "scene": null
         }
       ]
     }
