--- a/project.private.config.json
+++ b/project.private.config.json
@@ -53,6 +53,12 @@
           "pathName": "pages/evaluate/evaluate",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/orderdetails/orderdetails",
+          "pathName": "pages/orderdetails/orderdetails",
+          "query": "",
+          "scene": null
         }
       ]
     }
