--- a/project.private.config.json
+++ b/project.private.config.json
@@ -59,6 +59,12 @@
           "pathName": "pages/orderdetails/orderdetails",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "pages/comment/comment",
+          "pathName": "pages/comment/comment",
+          "query": "",
+          "scene": null
         }
       ]
     }
