--- a/app.json
+++ b/app.json
@@ -41,6 +41,7 @@
     "van-col": "@vant/weapp/col/index",
     "van-action-sheet": "@vant/weapp/action-sheet/index",
     "van-popup": "@vant/weapp/popup/index",
-    "van-uploader": "@vant/weapp/uploader/index"
+    "van-uploader": "@vant/weapp/uploader/index",
+    "van-swipe-cell": "@vant/weapp/swipe-cell/index"
   }
 }
