--- a/project.config.json
+++ b/project.config.json
@@ -4,6 +4,16 @@
   "packOptions": {
     "ignore": []
   },
+  "triggers": [
+    {
+      
+      "name": "myTrigger",
+
+      "type": "timer",
+
+      "config": "0 0 2 * * * *"
+    }
+  ],
   "setting": {
     "urlCheck": false,
     "es6": true,
