--- a/app.json
+++ b/app.json
@@ -42,6 +42,9 @@
     "van-action-sheet": "@vant/weapp/action-sheet/index",
     "van-popup": "@vant/weapp/popup/index",
     "van-uploader": "@vant/weapp/uploader/index",
-    "van-swipe-cell": "@vant/weapp/swipe-cell/index"
+    "van-swipe-cell": "@vant/weapp/swipe-cell/index",
+    "van-calendar": "@vant/weapp/calendar/index",
+    "van-action-sheet": "@vant/weapp/action-sheet/index",
+    "van-dialog": "@vant/weapp/dialog/index"
   }
 }
